<resources>
    <string name="app_name">Tasks</string>
    <string name="new_project">New project</string>
    <string name="no_deadline">No deadline</string>
    <string name="deadline_val">Deadline: %1$s</string>
    <string name="create_project">Create project</string>
    <string name="cancel">Cancel</string>
    <string name="project_name">Project name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_pending">Pending</string>
    <string name="tab_text_completed">Completed</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="urgent">Urgent</string>
    <string name="delete_project">Delete project</string>
    <string name="new_task">New task</string>
    <string name="task_name">Task name</string>
    <string name="add_task">Add task</string>
    <string name="priority">Priority</string>
    <string name="due_date">Due date</string>
    <string name="deadline">Deadline</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general">General</string>
    <string name="notification">Notification</string>

    <!-- Preference Theme -->
    <string name="pref_theme_key">theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_default_value">1</string>

    <!-- Preference Notifications -->
    <string name="pref_push_title">Enable push notifications</string>
    <string name="pref_push_key">push_notifications_enabled</string>

    <!-- Preference Daily Reminder -->
    <string name="pref_daily_title">Daily tasks reminder</string>
    <string name="pref_daily_summary">Receive reminders a day before task due date</string>
    <string name="pref_daily_key">daily_reminder_enabled</string>

    <!-- Other -->
    <string name="no_task">No task</string>
    <string name="task_count">%d/%d</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="login_title">Login to your account</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_successful">Login Successful</string>
    <string name="logout">Logout</string>
    <string name="prompt_name">Full name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_confirm_password">Passwords do not match</string>
    <string name="get_started">Get started</string>
    <string name="onboarding_subtitle">Manage your projects easily from anywhere</string>
    <string name="onboarding_title">Work anywhere easily</string>
    <string name="create_account">Create account</string>
    <string name="already_has_account">Already have an account? Login here</string>

    <string name="projects_empty_state">Get started by adding a new project</string>

    <!-- Shortcuts -->
    <string name="new_project_disabled">New project disabled</string>
</resources>