<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">
        <ListPreference
            app:defaultValue="@string/pref_theme_default_value"
            app:entries="@array/pref_theme_entries"
            app:entryValues="@array/pref_theme_values"
            app:icon="@drawable/ic_baseline_brightness_4_24"
            app:key="@string/pref_theme_key"
            app:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_notifications_24"
            app:key="@string/pref_push_key"
            app:title="@string/pref_push_title" />
        <SwitchPreference
            app:dependency="@string/pref_push_key"
            app:icon="@drawable/ic_baseline_timer_24"
            app:key="@string/pref_daily_key"
            app:summary="@string/pref_daily_summary"
            app:title="@string/pref_daily_title" />
    </PreferenceCategory>

</PreferenceScreen>